maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:39: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:46: error: Unmatched closing brace '}' ignored here
}
^